# agentic-engineer

./: .gitignore  AGENTS.md  README.md
.claude/agents/: architecturer.md  business-analyst.md  project-manager.md  spec-driven-coder.md
.claude/commands/: business-analyst.md  create-spec.md  create-user-story.md  spec-apply.md  spec-commit.md
.claude/hooks/: README.md  cross-project-check.py  session_tracker.py  subproject-context.py  test-reminder.py
.claude/skills/composition-patterns/: .openskills.json
admin-web/: AGENTS.md  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
auth-service/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
auth-service/app/: __init__.py  bootstrap.py  cli.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  session_store.py
auth-service/app/routers/: auth.py  users.py
auth-service/tests/: conftest.py  test_auth_login.py  test_bootstrap.py  test_cli.py  test_login_roles.py  test_models.py  test_security.py  test_seed.py  test_session_roles.py  test_session_roles_api.py  test_session_store.py  test_users_api.py
biz-service/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
biz-service/app/: auth.py  config.py  database.py  instruments_service.py  jwks.py  main.py  models.py  openapi.py  schemas.py
biz-service/app/routers/: instruments.py
biz-service/tests/: conftest.py  test_config.py  test_instruments_api.py  test_openapi.py
docs/: admin-web-auth.md  architecture.md
docs/best-practice/: testing.md
docs/harness-practice/: SOP.md
docs/template/: solution-template.md
e2e/: AGENTS.md  admin-login.spec.ts  api-auth.spec.ts  home.spec.ts  navbar.spec.ts  package.json  playwright.config.ts  session-roles.spec.ts  tsconfig.json  user-management.spec.ts  user-role-admin-access.spec.ts
e2e/scripts/: start-auth-for-playwright.sh
hooks/: pre-commit
specs/1-创建nextjs-初始项目/: plan.md  spec.md  tasks.md
specs/2026-05-01-user-management/: plan.md  spec.md
specs/3-用户可以登录-admin-web/: plan.md  spec.md  tasks.md
specs/user-profile/: 2026-06-13-user-profile.md
web/: AGENTS.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
web/app/: page.tsx
web/app/profile/: layout.tsx  (+1 more)
web/components/: auth-button.tsx  auth-dropdown.tsx  instruments-list.tsx
web/supabase/: instruments-fix-rls.sql  instruments.sql
(+34 files in other folders)
