[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-auth-service"
version = "0.1.0"
description = "FastAPI Auth service (login/session) for admin-web"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "argon2-cffi>=23.1.0",
  "fastapi>=0.115.6",
  "pydantic-settings>=2.6.1",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.4",
]

[project.scripts]
auth-create-user = "app.cli:console_main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/cli.py"]

[tool.coverage.report]
fail_under = 90
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
